trying to stay up to date :(

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -280,30 +280,13 @@
    "source": [
     "import os\n",
     "import traceback\n",
-    "from typing import List, Dict, AsyncGenerator\n",
-    "\n",
     "import openai\n",
     "from openai.error import OpenAIError\n",
-    "\n",
     "from dotenv import load_dotenv\n",
-    "\n",
-    "# Load .env file\n",
     "load_dotenv()\n",
-    "\n",
-    "# Read environment variables\n",
     "openai.api_key = os.getenv('OPENAI_API_KEY')\n",
     "\n",
-    "\n",
-    "async def converse(messages: List[Dict[str, str]]) -> AsyncGenerator[str, None]:\n",
-    "    \"\"\"\n",
-    "    Given a conversation history, generate an iterative response of strings from the OpenAI API.\n",
-    "\n",
-    "    :param messages: a conversation history with the following format:\n",
-    "    `[ { \"role\": \"user\", \"content\": \"Hello, how are you?\" },\n",
-    "       { \"role\": \"assistant\", \"content\": \"I am doing well, how can I help you today?\" } ]`\n",
-    "\n",
-    "    :return: a generator of delta string responses\n",
-    "    \"\"\"\n",
+    "async def converse(messages):\n",
     "    try:\n",
     "        async for chunk in await openai.ChatCompletion.acreate(\n",
     "                model=\"gpt-3.5-turbo-0613\",\n",
@@ -321,18 +304,10 @@
     "    except Exception as e:\n",
     "        yield f\"EXCEPTION {str(e)}\"\n",
     "        \n",
-    "def create_conversation_starter(user_prompt: str) -> List[Dict[str, str]]:\n",
-    "    \"\"\"\n",
-    "    Given a user prompt, create a conversation history with the following format:\n",
-    "    `[ { \"role\": \"user\", \"content\": user_prompt } ]`\n",
-    "\n",
-    "    :param user_prompt: a user prompt string\n",
-    "    :return: a conversation history\n",
-    "    \"\"\"\n",
+    "def create_conversation_starter(user_prompt):\n",
     "    return [{\"role\": \"user\", \"content\": user_prompt}]\n",
     "\n",
-    "async def run_conversation(messages: List[Dict[str, str]], message_placeholder: DeltaGenerator) \\\n",
-    "        -> List[Dict[str, str]]:\n",
+    "async def run_conversation(messages, message_placeholder):\n",
     "    full_response = \"\"\n",
     "    message_placeholder.markdown(\"Thinking...\")\n",
     "    chunks = converse(messages)\n",
@@ -350,9 +325,7 @@
     "    return messages\n",
     "\n",
     "\n",
-    "async def run_prompt(prompt: str,\n",
-    "                     message_placeholder: DeltaGenerator) \\\n",
-    "        -> List[Dict[str, str]]:\n",
+    "async def run_prompt(prompt, message_placeholder):\n",
     "    messages = create_conversation_starter(prompt)\n",
     "    messages = await run_conversation(messages, message_placeholder)\n",
     "    return messages"
